<resources>
    <string name="app_name">Route Planner</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="title_activity_home">Route Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_route_list">Routes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="scanner">Code Scanner</string>
    <string name="title_activity_check_in">Check In</string>
    <string name="enter_amount">Enter amount</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="scan_code">Scan qr code</string>

    <string-array name="cash_types">
        <item>CASH</item>
        <item>E-LOAD</item>
    </string-array>

    <string-array name="encode_types">
        <item>QR_CODE</item>
        <item>CODE_39</item>
        <item>CODE_93</item>
        <item>CODE_128</item>
        <item>EAN_8</item>
        <item>EAN_13</item>
    </string-array>

    <string-array name="output_height">
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
        <item>190</item>
        <item>200</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="eload">E-LOAD</string>
    <string name="cash">CASH</string>
    <string name="logout">Logout</string>
    <string name="title_activity_agent">Agent</string>
    <string name="request_form">Balance Request Form</string>
    <string name="title_activity_balance_request">Request Balance</string>
    <string name="submit">Submit</string>
    <string name="title_activity_generate_code">Generate Code</string>
    <string name="encode_type">ENCODE TYPE :</string>
    <string name="output_height">BARCODE HEIGHT :</string>
    <string name="dp">dp</string>
    <string name="generate_code">Generate Code</string>
    <string name="enter_generate_code">Enter text to generate...</string>
    <string name="update">Update</string>
    <string name="amount">Amount : </string>
    <string name="type">Type   : </string>
</resources>
