<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium_2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tip_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/PrimaryBorderButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btn_update"
                    style="@style/PrimaryBorderButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_weight="1"
                    android:text="@string/update" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>