<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/primary" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lb_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium_2"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_sign_up"
                android:layout_below="@id/lb_sign_in"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/margin_medium_2"
                        android:src="@drawable/ic_perm_identity_24dp" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/margin_medium_2"
                        android:src="@drawable/ic_lock_outline_24dp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/ll_sign_in"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:background="@drawable/bg_round_primary_button"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/ll_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_account"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/sign_up"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_regular" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>