<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_medium"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_generate_code"
            android:paddingStart="@dimen/margin_medium"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/ll_encode_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_input"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/encode_type"
                android:textColor="@color/primary_text" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_encode"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/bg_round_primary_border"
                android:entries="@array/encode_types" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_output_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_encode_type"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/output_height"
                android:textColor="@color/primary_text" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_width"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_round_primary_border"
                android:entries="@array/output_height" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/dp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_3x" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_output_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_generate_barcode"
                style="@style/AccentBorderButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/bg_ripple_accent"
                android:text="@string/generate_code" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_button_view">

            <ImageView
                android:id="@+id/iv_result_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter" />
        </RelativeLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
