<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AgentActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium_2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/lb_balance_rq_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/request_form"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_3x" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tip_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lb_balance_rq_form"
            android:layout_marginTop="@dimen/margin_medium_2">

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sp_cash_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tip_amount"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:entries="@array/cash_types" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/PrimaryBorderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_cash_type"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/submit" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>